--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "alexpechkarev/google-geocoder": "dev-master",
         "fideloper/proxy": "~3.3",
+        "laracasts/utilities": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.5",
-        "toin0u/geocoder-laravel": "^4.0"
+        "laravelcollective/html": "^5.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
