--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "alexpechkarev/google-geocoder": "dev-master",
+        "barryvdh/laravel-cors": "^0.10.0",
         "fideloper/proxy": "~3.3",
         "laracasts/utilities": "^3.0",
         "laravel/framework": "5.5.*",
