--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "alexpechkarev/google-geocoder": "dev-master",
         "barryvdh/laravel-cors": "^0.10.0",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
         "laracasts/utilities": "^3.0",
         "laravel/framework": "5.5.*",
